--- a/index.html
+++ b/index.html
@@ -38,5 +38,20 @@
     <section id="banner">
         <h2>Adote nosso animais! =D</h2>   
     </section>
+    <section id="servico">
+        <div class="row">
+            <div class="col-4">
+                Serviço 1
+            </div>
+            <div class="col-4">
+                Serviço 2
+            </div>
+            <div class="col-4">
+                Serviço 3
+            </div>
+
+
+        </div>
+    </section>
 </body>
 </html>
